--- a/index.html
+++ b/index.html
@@ -166,39 +166,43 @@
       <section class="members">
         <h3 class="section-title">New Members</h3>
         <div class="members-container">
-          <img src="images/member-1.jpg" alt="Victoria's Profile Picture" class="profile-image">
-          <div class="memebers-text">
+          <img src="images/member-1.jpg" alt="Victoria's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
             <p>Victoria Chambers</p>
             <a href="#">victoria.chambers80@expample.com</a>
+            <p class="member-date">10/15/15</p>
           </div>
-          <p>10/15/15</p>
+
         </div>
 
         <div class="members-container">
-          <img src="images/member-2.jpg" alt="Dale's Profile Picture" class="profile-image">
-          <div class="memebers-text">
+          <img src="images/member-2.jpg" alt="Dale's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
             <p>Dale Byrd</p>
             <a href="#">dale.byrd52@expample.com</a>
+            <p class="member-date">10/15/15</p>
           </div>
-          <p>10/15/15</p>
+
         </div>
 
         <div class="members-container">
-          <img src="images/member-3.jpg" alt="Dawn's Profile Picture" class="profile-image">
-          <div class="memebers-text">
+          <img src="images/member-3.jpg" alt="Dawn's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
             <p>Dawn Wood</p>
             <a href="#">dawn.wood16@expample.com</a>
+            <p class="member-date">10/15/15</p>
           </div>
-          <p>10/15/15</p>
+
         </div>
 
         <div class="members-container">
-          <img src="images/member-4.jpg" alt="Dan's Profile Picture" class="profile-image">
-          <div class="memebers-text">
+          <img src="images/member-4.jpg" alt="Dan's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
             <p>Dan Oliver</p>
             <a href="#">victoria.chambers80@expample.com</a>
+            <p class="member-date">10/15/15</p>
           </div>
-          <p>10/15/15</p>
+
         </div>
 
       </section>
@@ -207,39 +211,39 @@
       <section class="activity">
         <h3 class="section-title">Recent Activity</h3>
         <div class="members-container">
-          <img src="images/member-1.jpg" alt="Victoria's Profile Picture" class="profile-image">
-          <div class="memebers-text">
-            <p>Victoria Chambers</p>
-            <p>commented on YourApp's SEO Tips</p>
+          <img src="images/member-1.jpg" alt="Victoria's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
+            <p>Victoria Chambers <span class="comment">commented on YourApp's SEO Tips</span></p>
+            <p class="comment-time">4 hours ago</p>
           </div>
-          <p>4 hours ago</p>
+          <span class="fas fa-chevron-right fa-lg right-arrow"></span>
         </div>
 
         <div class="members-container">
-          <img src="images/member-2.jpg" alt="Dale's Profile Picture" class="profile-image">
-          <div class="memebers-text">
-            <p>Dale Byrd</p>
-            <p>likes the post Facebook's changes for 2016</p>
+          <img src="images/member-2.jpg" alt="Dale's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
+            <p>Dale Byrd <span class="comment">likes the post Facebook's changes for 2016</span></p>
+            <p class="comment-time">5 hours ago</p>
           </div>
-          <p>5 hours ago</p>
+          <span class="fas fa-chevron-right fa-lg right-arrow"></span>
         </div>
 
         <div class="members-container">
-          <img src="images/member-3.jpg" alt="Dawn's Profile Picture" class="profile-image">
-          <div class="memebers-text">
-            <p>Dawn Wood</p>
-            <p>commented on Facebook's changes for 2016</p>
+          <img src="images/member-3.jpg" alt="Dawn's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
+            <p>Dawn Wood <span class="comment">commented on Facebook's changes for 2016</span></p>
+            <p class="comment-time">5 hours ago</p>
           </div>
-          <p>5 hours ago</p>
+          <span class="fas fa-chevron-right fa-lg right-arrow"></span>
         </div>
 
         <div class="members-container">
-          <img src="images/member-4.jpg" alt="Dan's Profile Picture" class="profile-image">
-          <div class="memebers-text">
-            <p>Dan Oliver</p>
-            <p>posted YourApp's SEO Tips</p>
+          <img src="images/member-4.jpg" alt="Dan's Profile Picture" class="profile-image member-image">
+          <div class="members-text">
+            <p>Dan Oliver <span class="comment">posted YourApp's SEO Tips</span></p>
+            <p class="comment-time">1 day ago</p>            
           </div>
-          <p>1 day ago</p>
+          <span class="fas fa-chevron-right fa-lg right-arrow"></span>
         </div>
       </section>
 
