finished css build

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>YourApp Dashboard</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <script src="https://kit.fontawesome.com/0563c194c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/toggle-switch.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/0563c194c2.js" crossorigin="anonymous"></script>
   </head>
   <body class="grid-container">
     <header>
@@ -170,9 +170,9 @@
           <div class="members-text">
             <p>Victoria Chambers</p>
             <a href="#">victoria.chambers80@expample.com</a>
-            <p class="member-date">10/15/15</p>
-          </div>
 
+          </div>
+          <p class="member-date">10/15/15</p>
         </div>
 
         <div class="members-container">
@@ -180,9 +180,9 @@
           <div class="members-text">
             <p>Dale Byrd</p>
             <a href="#">dale.byrd52@expample.com</a>
-            <p class="member-date">10/15/15</p>
-          </div>
 
+          </div>
+          <p class="member-date">10/15/15</p>
         </div>
 
         <div class="members-container">
@@ -190,9 +190,9 @@
           <div class="members-text">
             <p>Dawn Wood</p>
             <a href="#">dawn.wood16@expample.com</a>
-            <p class="member-date">10/15/15</p>
-          </div>
 
+          </div>
+          <p class="member-date">10/15/15</p>
         </div>
 
         <div class="members-container">
@@ -200,9 +200,9 @@
           <div class="members-text">
             <p>Dan Oliver</p>
             <a href="#">victoria.chambers80@expample.com</a>
-            <p class="member-date">10/15/15</p>
-          </div>
 
+          </div>
+          <p class="member-date">10/15/15</p>
         </div>
 
       </section>
@@ -241,7 +241,7 @@
           <img src="images/member-4.jpg" alt="Dan's Profile Picture" class="profile-image member-image">
           <div class="members-text">
             <p>Dan Oliver <span class="comment">posted YourApp's SEO Tips</span></p>
-            <p class="comment-time">1 day ago</p>            
+            <p class="comment-time">1 day ago</p>
           </div>
           <span class="fas fa-chevron-right fa-lg right-arrow"></span>
         </div>
@@ -268,11 +268,13 @@
                 Send E-mail Notifications
               </strong>
 
-              <span>
+              <span class="toggle-button">
                 <span>Off</span>
                 <span>On</span>
                 <a></a>
               </span>
+
+
             </label>
             <!-- Custom CSS Toggle Code -->
             <label class="switch-light switch-ios" onclick="">
