--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <!-- Messages Widget -->
         <section class="message" id="settingsSection">
           <h3 class="section-title">Message User</h3>
-          <form class="widget-container">
+          <form autocomplete="off" class="widget-container">
             <input type="text" placeholder="Search for User" class="form-field" id="userField">
             <textarea placeholder="Message for User" class="form-area" id="messageField"></textarea>
             <button class="button-primary" id="send">Send</button>
@@ -306,6 +306,7 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
+    <script src="js/autofill.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
